# evalkit

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yml
datasets/: reasoning.yml  summarization.yml
docker/: Dockerfile
src/evalkit/: __init__.py
src/evalkit/api/: __init__.py  app.py  routes.py  schemas.py
src/evalkit/cli/: __init__.py  main.py
src/evalkit/comparison/: __init__.py  analyzer.py  elo.py  human.py
src/evalkit/config/: __init__.py  loader.py  schema.py
src/evalkit/core/: __init__.py  registry.py  types.py
src/evalkit/datasets/: __init__.py  builtin.py  loader.py
src/evalkit/providers/: __init__.py  anthropic_provider.py  base.py  mock.py  openai_provider.py
src/evalkit/reports/: __init__.py  charts.py  formatter.py
src/evalkit/runners/: __init__.py  batch.py  executor.py
src/evalkit/scorers/: __init__.py  base.py  composite.py  contains.py  custom.py  exact_match.py  llm_judge.py  regex.py  similarity.py
src/evalkit/storage/: __init__.py  backend.py  models.py
src/evalkit/utils/: __init__.py  tokens.py
tests/: __init__.py  conftest.py
tests/test_api/: __init__.py  test_routes.py
tests/test_comparison/: __init__.py  test_analyzer.py
tests/test_datasets/: __init__.py  test_loader.py
tests/test_runners/: __init__.py  test_executor.py
tests/test_scorers/: __init__.py  test_scorers.py
tests/test_storage/: __init__.py  test_backend.py
